# chatGPT_QQBot

./: .gitignore  main.py
go-cqhttp/: config.yml  device.json
go-cqhttp/data/images/: LOG
go-cqhttp/data/leveldb-v3/: LOG
go-cqhttp/data/videos/: LOG
wang_chat/: .env.dev  README.md  bot.py  chat.py  pyproject.toml
wang_chat/src/plugins/chat/: __init__.py
